Added new files, modified some

--- a/Open source.wiki
+++ b/Open source.wiki
@@ -2,4 +2,5 @@
 
 Here is the list of all things open source. That means it runs on all platforms, not just linux
 
-[[Telegram| Telegram APIs]]
+- [[Telegram| Telegram APIs]]
+- [[Mongodb]]
