--- a/Troubleshooting.wiki
+++ b/Troubleshooting.wiki
@@ -1,4 +1,4 @@
 = Troubleshooting =
 
-If everything is stuck
+*If everything is stuck*
 - Try to open another TTY by pressing Ctrl Alt Function keys
