Added bash, regex, android, pm2 and xrander wiki pages

--- a/CLI.wiki
+++ b/CLI.wiki
@@ -11,3 +11,6 @@ This includes URxvt cuz it's the terminal
 - [[awk]]
 - sed
 - [[apt]]
+- [[xrandr|Managing screen resolutions]]
+- [[bash]]
+- [[regex|Regular Expressions]]
