--- a/index.wiki
+++ b/index.wiki
@@ -6,6 +6,7 @@ Here is the list of the notes that I make in general
 * [[Open source|Open source development]]
 * [[Navigating digital information]]
 * [[Android]]
+* [[General]]
 
 
 
